<resources>
    <string name="app_name">Practic two</string>
    <string name="app_title">Apps Store</string>
    <string name="activity_detail_hint_NameApp">APP Name</string>
    <string name="activity_detail_hint_NameDeployment">Deployment Name</string>
    <string name="activity_detail_hint_DetailApp">APP Detail</string>
    <string name="activity_detail_Chkbox_TxtInstallActualize">Update</string>
    <string name="activity_detail_Btn_Add">ADD</string>
    <string name="msjbddempty">Dont APP in Storea</string>
    <string name="msjwelcom">Welcom Play Store</string>
    <string name="txtInstallList">INSTALLED</string>
    <string name="txtUpdateList">UPDATED</string>
    <string name="msj_error_data">Error to get data to list</string>
    <string name="txtTitleDetail">Add App</string>
    <string name="txtTitleToolbar">App Store</string>
    <string name="txtTitleNotifi">Practic two</string>
    <string name="txtUpdateMenu">Update</string>
    <string name="txtTitleEndMenu">End</string>
    <string name="txtAddMenu">Add</string>
    <string name="txtEditMenu">Detail edit</string>
    <string name="txtReturnMenu">Return</string>
    <string name="txtTitleEdit">App Edit</string>
    <string name="activity_detail_Btn_Edit">Edit</string>
    <string name="activity_detail_txt_Actualize">Update</string>
    <string name="detailstore_confirm_title">Very important</string>
     <string name="detailstore_detailstoretxtUnistall_text">UNISTALLED</string>
    <string name="detailstore_confirm_question">Accepts the removal of the APP?</string>
    <string name="detailstore_confirm_confirm">Acept</string>
    <string name="detailstore_confirm_cancel">Cancel</string>
    <string name="detailstore_xml_txtunistall">unistall</string>
    <string name="detailstore_xml_txtupdate">update</string>
    <string name="detailstore_xml_txtopen">open</string>
    <string name="servicenotify2_update_title">Full update</string>
    <string name="servicenotify2_update_info">Updated</string>
    <string name="servicenotify2_update_text">It is completed in its entirety Update</string>
    <string name="servicenotify2_update_bigtext">Update is complete.</string>
    <string name="servicenotify2_update_Contexttitle">Updated</string>
    <string name="servicenotify2_update_Contexttext">APP updated</string>
    <string name="servicenotify_desinstall_title">Full uninstall</string>
    <string name="servicenotify_desinstall_text">It is completed in its entirety Uninstall</string>
    <string name="servicenotify_desinstall_info">Uninstalled</string>
    <string name="servicenotify_desinstall_bigtext">Uninstall is complete.</string>
    <string name="servicenotify_desinstall_contexttitle">Unistalled</string>
    <string name="servicenotify_desinstall_ContentText">APP Unistalled</string>
</resources>
