<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/NameAPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_detail_hint_NameApp"/>
    <EditText
        android:id="@+id/NameDeployment"
        android:layout_below="@+id/NameAPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_detail_hint_NameDeployment"/>
    <EditText
        android:id="@+id/DetailApp"
        android:layout_below="@+id/NameDeployment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_detail_hint_DetailApp"/>
    <CheckBox
        android:layout_marginTop="16dp"
        android:layout_below="@+id/DetailApp"
        android:id="@+id/chkInstallUpdate"
        android:text="@string/activity_detail_Chkbox_TxtInstallActualize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnAdd"
        android:layout_gravity="right"
        android:text="@string/activity_detail_Btn_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>